# SlopeCraft

./: .clang-format  .gitattribute  .gitattributes  .gitignore  CMakeLists.txt  Collecter.cpp  FAQ.md  FAQ_EN.md  HSV.Toki  Lab.Toki  Page6.cpp  Page8.cpp  Pics.qrc  README-en.md  README.md  README_EN.md  Readme.txt  Slope.pro  SlopeCraft-install-macOS.zsh  SlopeCraft-macOS-build.zsh  SlopeCraft.pro  XYZ.Toki  forcomingGoals.md  main.cpp  mainwindow.cpp  mainwindow.ui  mcmap.cpp  mcmap.h  zgORhI.json  傻瓜级使用教程.md  简体中文版协议.txt
BlockListManager/: BlockListManager.cpp  BlockListManager.h  BlockListManager.pro  BlockListManager_en_US.ts  BlockListManager_global.h  BlockListManager_zh_CN.ts  CMakeLists.txt  TokiBaseColor.cpp  TokiBaseColor.h  TokiBlock.cpp  TokiBlock.h
ColorManip/: CMakeLists.txt  StaticMembers.cpp  colorset_maptical.hpp  newColorSet.hpp  newTokiColor.hpp
GAConverter/: CMakeLists.txt  GAConverter.cpp  GAConverter.h  GAConverter.pro  GACvterDefines.hpp  sortColor.cpp  sortColor.h  uiPack.h
MapViewer/: CMakeLists.txt  MapViewer.pro  MapViewerWind.cpp  MapViewerWind.h  MapViewerWind.ui  MapViewer_en_US.ts  images.qrc  install.cmake  main.cpp  processMapFiles.cpp  processMapFiles.h  resource_manually.cpp
MapViewer/others/: MapViewer.desktop  MapViewer.icns  MapViewer.rc  MapViewer.rc.in
SlopeCraft/: AdaptiveListView.cpp  AdaptiveListView.h  AiCvterParameterDialog.cpp  AiCvterParameterDialog.h  AiCvterParameterDialog.ui  BlockListDialog.cpp  BlockListDialog.h  BlockListDialog.ui  CMakeLists.txt  CompressEffectViewer.cpp  CompressEffectViewer.h  CompressEffectViewer.ui  CopyableTableView.cpp  CopyableTableView.h  ExportTableModel.cpp  ExportTableModel.h  PoolModel.cpp  PoolModel.h  PreviewWind.cpp  PreviewWind.h  PreviewWind.ui  SCWind.cpp  SCWind.h  SCWind.ui  SCWind_slots.cpp  TransparentStrategyWind.cpp  TransparentStrategyWind.h  TransparentStrategyWind.ui  cvt_task.cpp  cvt_task.h  install.cmake  main.cpp
SlopeCraft/others/: BlockTextures.qrc  SlopeCraft.desktop  SlopeCraft.rc.in  SlopeCraft_en_US.ts  elegant.sc_preset_json  shiny.sc_preset_json  vanilla.sc_preset_json
SlopeCraftL/: AiCvterOpt.cpp  AiCvterOpt.h  CIEDE00.cpp  CMakeLists.txt  ColorSet.h  ColorSource.cpp  Colors.cpp  Colors.h  Colorset.cpp  Colorset.h  HeightLine.cpp  HeightLine.h  NBTWriter.cpp  NBTWriter.h  OptiChain.cpp  OptiChain.h  PrimGlassBuilder.cpp  PrimGlassBuilder.h  SCLDefines.h  SlopeCraftL.cpp  SlopeCraftL.h  SlopeCraftL.pro  SlopeCraftL_CAPI.cpp  SlopeCraftL_global.h  TokiColor.h  TokiSlopeCraft.cpp  TokiSlopeCraft.h  TokiSlopeCraft_build.cpp  TokiSlopeCraft_cache.cpp  TokiSlopeCraft_convert.cpp  TokiSlopeCraft_static_funs.cpp  WaterItem.cpp  WaterItem.h  WriteStringDeliver.h  block_list.cpp  blocklist.h  color_source.cpp  color_table.cpp  color_table.h  colorset.cpp  (+29 more)
SlopeCraftL/SCL_C/: CMakeLists.txt  SlopeCraftL_global.h
SlopeCraftL/others/: SlopeCraftL.rc  SlopeCraftL.rc.in
SlopeCraftL/tests/: load_scl_blocklist.cpp
SlopeCraftMain/: AiCvterParameterDialog.cpp  AiCvterParameterDialog.h  AiCvterParameterDialog.ui  BatchOperator.cpp  BatchOperator.h  BatchUi.cpp  BatchUi.h  BatchUi.ui  CMakeLists.txt  MainWindow.cpp  MainWindow.h  SlopeCraftMain.pro  SlopeCraft_en_US.ts  TaskBox.cpp  TaskBox.h  TokiTask.cpp  TokiTask.h  VersionDialog.cpp  VersionDialog.h  VersionDialog.ui  install.cmake  main.cpp  mainwindow.ui  previewwind.cpp  previewwind.h  previewwind.ui  tpstrategywind.cpp  tpstrategywind.h
SlopeCraftMain/others/: AiCvterParameterDialog.ui  BatchUi.ui  Pics.qrc  SlopeCraft.icns  SlopeCraft.rc  SlopeCraft.rc.in  SlopeCraftIconNew.icns  SlopeCraft_en_US.ts  SlopeCraft_translation.qrc  SlopeCraft_zh_CN.ts  TaskBox.ui  VersionDialog.ui  cheap.sc_preset_json  deployqt_win.bat.in  mainwindow.ui  previewwind.ui  vanilla.sc_preset_json
VC-cl/: CMakeLists.txt  VC-cl.cpp  commands.md  install.cmake
VisualCraft/: BiomeBrowser.cpp  BiomeBrowser.h  BiomeBrowser.ui  BlockBrowser.cpp  BlockBrowser.h  BlockBrowser.ui  BlockSelector.cpp  BlockSelector.h  BlockSelector.ui  BlockSelectorCriteria.cpp  BlockSelectorCriteria.ui  CMakeLists.txt  CallbackFunctions.cpp  CallbackFunctions.h  ColorBrowser.cpp  ColorBrowser.h  ColorBrowser.ui  VCWind.cpp  VCWind.h  VCWind.ui  VCWind_export.cpp  VCWind_gpu.cpp  VCWind_select.cpp  VCWind_subwindows.cpp  VC_block_class.cpp  VC_block_class.h  VC_block_class.ui  advanced_qlist_widget_item.cpp  advanced_qlist_widget_item.h  install.cmake  main.cpp  vc-config-to-bin-dir.json.in  vc-config.json
VisualCraft/others/: VCWind.ui  VisualCraft.desktop  VisualCraft.icns  VisualCraft.rc.in  VisualCraft_en_US.ts
VisualCraftL/: BlockStateList.cpp  BlockStateList.h  CMakeLists.txt  DirectionHandler.hpp  ParseResourcePack.cpp  ParseResourcePack.h  ParseResourcePack_blocks.cpp  ParseResourcePack_json.cpp  ParseResourcePack_png.cpp  ResourcePack.cpp  Resource_tree.cpp  Resource_tree.h  SCL_json_cvt.cpp  TokiVC.cpp  TokiVC.h  TokiVC_build.cpp  TokiVC_export_test.cpp  TokiVC_flagdiagram.cpp  VCL_blocks_fixed.json  VCL_internal.h  VCL_internal_test_fun.cpp  VisualCraftL.cpp  VisualCraftL.def  VisualCraftL.h  VisualCraftL.rc  VisualCraftL.rc.in  VisualCraftL_global.h  VisualCraft_classes.h  add_test_executables.cmake  block_states.json  config_versions.cmake  generate_tests.cmake  install.cmake  setup_zip_names.cmake  test_VCL_blockstate.cpp  test_VCL_internal.cpp  test_fun.cpp  test_fun_unused.cpp  textures_need_to_override.cpp  textures_need_to_override.h  (+1 more)
VisualCraftL/others/: VisualCraftL.def  VisualCraftL.def.in  VisualCraftL.rc.in  biomes.csv
imageCutter/: CMakeLists.txt  CutterWind.cpp  CutterWind.h  CutterWind.ui  imageCutter.pro  imageCutter_en_US.ts  imageCutter_translate.qrc  install.cmake  main.cpp
imageCutter/others/: imageCutter.rc  (+3 more)
utilities/: CMakeLists.txt  SC_GlobalEnums.h  SC_aligned_alloc.hpp  SC_version_buildtime.h.in  install.cmake
vccl/: CMakeLists.txt  add_test_vccl.cmake  commands.md  deploy_qt_for_vccl_macos.cmake.in  install.cmake  vccl-config-to-bin-dir.json.in  vccl-config.json  vccl.cpp  vccl_internal.h  vccl_parse_default.cpp
(+391 files in other folders)
